samples/_failures_safe/1761203063_08f911_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb45d200.c: In function ‘main’:
./samples/SAFE/__tmp_cb45d200.c:174:21: error: expected ‘)’ at end of input
  174 |     if (!read_matrix
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_cb45d200.c:174:5: error: expected declaration or statement at end of input
  174 |     if (!read_matrix
      |     ^~
